<resources>
    <string name="app_name">Covid19Stats</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_global">Global</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_news">News</string>
    <string name="title_location">Country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_info">About</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="global_cases">Cases</string>
    <string name="global_recoveries">Recoveries</string>
    <string name="global_deaths">Deaths</string>
    <string name="active">Active Cases</string>
    <string name="critical">Critical Cases</string>
    <string name="info">Info</string>
    <string name="today_deaths"> Today Deaths</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="recovered">Recovered</string>
    <string name="text_day_mode">Day Mode</string>
    <string name="text_night_mode">Night Mode</string>
    <string name="loading">loading..</string>
    <string name="global_numbers">Official COVID-19 Global Numbers</string>
    <string name="updated_after">Swipe Down to Refresh. Updated every 10 minutes</string>
    <string name="twitter_username">\@gavin_k3</string>
    <string name="github_username">gavin nyamboga</string>
    <string name="phone_number">+254724136105</string>
    <string name="flag">FLAG</string>
    <string name="today_cases">Today Cases</string>
    <string name="initial_zero">00</string>
    <string name="about_corona_virus">About Corona Virus</string>
    <string name="covid19">covid19</string>
    <string name="search">Search</string>
    <string name="sorted_by">sorted by the number of confirmed cases</string>
    <string name="twitter">twitter</string>
    <string name="phone">phone</string>
    <string name="github">github</string>
    <string name="official_covid_19_tips">Official COVID-19 Tips</string>
    <string name="what_you_need_to_know_and_do">What you need to know and do.</string>
    <string name="prevention_measures">Prevention Measures</string>
    <string name="type_country_to_search">Type Country to Search</string>
    <string name="symptoms_of_corona_virus">Symptoms of Corona Virus</string>
    <string name="transmission">Transmission</string>
    <string name="is_a_vaccine_or_treatment_available">Is a vaccine or treatment Available?</string>
    <string name="what_are_corona_viruses">What are Corona Viruses?</string>
    <string name="description">description</string>
    <string name="content">content</string>
    <string name="read_more">Read more..</string>
    <string name="news_source">News Source</string>
    <string name="time_posted">Time Posted</string>
    <string name="heading">Heading.</string>
</resources>
