<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:backgroundTint="@color/colorAccent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<ImageView
    android:id="@+id/news_image"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:scaleType="fitXY"
    android:src="@drawable/ic_launcher_background"
    android:contentDescription="@string/title_news" />
    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/heading"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/news_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/description"
        android:minLines="1"
        android:textColor="@android:color/darker_gray"
        android:textSize="19sp" />
    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/news_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:maxLines="6"
            android:text="@string/content"
            />
        <TextView
            android:id="@+id/news_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/read_more"
            android:autoLink="web"
            android:textSize="17sp"
            android:textColor="@android:color/holo_blue_dark"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/news_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_source"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/news_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time_posted"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>


</com.google.android.material.card.MaterialCardView>