<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DeveloperFragment">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/twitter_logo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/ic_twitter"
                        android:contentDescription="@string/twitter" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        app:cardCornerRadius="5dp"
                        android:backgroundTint="?attr/colorPrimaryCards">
                    <TextView
                        android:id="@+id/twitter_link"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/twitter_username"
                        android:textSize="20sp"
                        android:textColor="@color/orange"
                        android:gravity="center"
                        />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/github_logo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/ic_github"
                        android:contentDescription="@string/github" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        app:cardCornerRadius="5dp"
                        android:backgroundTint="?attr/colorPrimaryCards">
                    <TextView
                        android:id="@+id/github_link"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/github_username"
                        android:textSize="20sp"
                        android:textColor="@color/orange"
                        android:gravity="center"
                        android:autoLink="web"
                        />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/phone_logo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/ic_telephone"
                        android:contentDescription="@string/phone" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        app:cardCornerRadius="5dp"
                        android:backgroundTint="?attr/colorPrimaryCards">
                        <TextView
                            android:id="@+id/phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/phone_number"
                            android:textSize="20sp"
                            android:textColor="@color/orange"
                            android:gravity="center"

                            />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>





        </LinearLayout>

</FrameLayout>