<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_global"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global_numbers"
                android:textColor="?attr/colorTxt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_after" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:backgroundTint="?attr/colorPrimaryCards"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                android:elevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTxt"
                        android:text="@string/global_cases"
                        android:layout_gravity="center"
                        android:textSize="25sp"/>
                    <TextView
                        android:id="@+id/cases_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/orange"
                        android:text="___"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="7dp"
                        app:srcCompat="@drawable/ic_confirmation"
                        android:layout_gravity="center"
                        android:contentDescription="@string/global_cases" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:backgroundTint="?attr/colorPrimaryCards"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                android:elevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTxt"
                        android:text="@string/global_deaths"
                        android:layout_gravity="center"
                        android:textSize="25sp"/>
                    <TextView
                        android:id="@+id/deaths_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/deathsColor"
                        android:text="___"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_skull"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/global_deaths" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:backgroundTint="?attr/colorPrimaryCards"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                android:elevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTxt"
                        android:text="@string/global_recoveries"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/recoveries_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/recoveryColor"
                        android:text="___"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_recovery"
                        android:contentDescription="@string/recovered" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:backgroundTint="?attr/colorPrimaryCards"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                android:elevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTxt"
                        android:text="@string/critical"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/critical_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/critical"
                        android:text="___"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_ventilator"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/critical" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

            <androidx.cardview.widget.CardView
                android:backgroundTint="?attr/colorPrimaryCards"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="5dp"
                android:elevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTxt"
                        android:text="@string/active"
                        android:layout_gravity="center"
                        android:textSize="25sp"/>
                    <TextView
                        android:id="@+id/active_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/active"
                        android:text="___"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_cough"
                        android:contentDescription="@string/active" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

    </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>